songvoter/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: songvoter
  annotations:
    linkerd.io/inject: enabled
