songvoter/song-voter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: songvoter
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: harbor
      containers:
      - name: backend
        image: harbor.flou.dev/coflnet/songvoter:97b53e96-b8f9-4faf-bd08-274007cd0706
        ports:
          - containerPort: 4200
        resources:
          requests:
            memory: "100Mi"
            cpu: "20m"
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: songvoter
spec:
  selector:
    app: backend
  ports:
    - port: 4200
      targetPort: 4200
