songvoter/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: songvoter
  namespace: songvoter
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: songvoter.party
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service: 
            name: songvoter
            port:
              number: 4200
